put a placeholder img for people who don't have pictures so that it looks nicer. Also stopped the names from wrapping so it doesn't mess up the image grid of people.

--- a/css/application.css
+++ b/css/application.css
@@ -256,6 +256,7 @@ a:focus{
 .thumbnails > li > a > h4{
 	margin: 10px auto;
 	text-align: center;
+	white-space: nowrap;
 	
 }
 .people > li{
